--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -12,6 +12,11 @@
     "@nuxtjs/axios": "^5.13.6",
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "sass": "^1.34.1",
+    "webpack": "^4.46.0"
+  },
+  "devDependencies": {
+    "node-sass": "^6.0.0"
   }
 }
