--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
     "sass": "^1.34.1",
+    "sass-loader": "^10",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
