--- a/strapi/api/projects/models/projects.settings.json
+++ b/strapi/api/projects/models/projects.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "projects",
   "info": {
-    "name": "Projects"
+    "name": "Projects",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -31,6 +32,12 @@
     },
     "description2": {
       "type": "text"
+    },
+    "position": {
+      "type": "string"
+    },
+    "medium": {
+      "type": "string"
     }
   }
 }
