--- a/strapi/api/projects/models/projects.settings.json
+++ b/strapi/api/projects/models/projects.settings.json
@@ -38,6 +38,18 @@
     },
     "medium": {
       "type": "string"
+    },
+    "video": {
+      "collection": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
