--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "pg": "^8.7.1",
+    "pg-connection-string": "^2.5.0",
     "strapi-provider-upload-aws-s3": "^3.6.6"
   }
 }
