--- a/strapi/package.json
+++ b/strapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strapi",
-  "private": true,
+  "private": false,
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
@@ -14,17 +14,17 @@
     "pg": "^8.7.1",
     "pg-connection-string": "^2.4.0",
     "sqlite3": "5.0.0",
-    "strapi": "3.6.3",
-    "strapi-admin": "3.6.3",
-    "strapi-connector-bookshelf": "3.6.3",
-    "strapi-plugin-content-manager": "3.6.3",
-    "strapi-plugin-content-type-builder": "3.6.3",
-    "strapi-plugin-email": "3.6.3",
-    "strapi-plugin-i18n": "3.6.3",
-    "strapi-plugin-upload": "3.6.3",
-    "strapi-plugin-users-permissions": "3.6.3",
+    "strapi": "3.6.6",
+    "strapi-admin": "3.6.6",
+    "strapi-connector-bookshelf": "3.6.6",
+    "strapi-plugin-content-manager": "3.6.6",
+    "strapi-plugin-content-type-builder": "3.6.6",
+    "strapi-plugin-email": "3.6.6",
+    "strapi-plugin-i18n": "3.6.6",
+    "strapi-plugin-upload": "3.6.6",
+    "strapi-plugin-users-permissions": "3.6.6",
     "strapi-provider-upload-aws-s3": "^3.6.6",
-    "strapi-utils": "3.6.3"
+    "strapi-utils": "3.6.6"
   },
   "author": {
     "name": "A Strapi developer"
