--- a/strapi/package.json
+++ b/strapi/package.json
@@ -13,6 +13,7 @@
     "knex": "0.21.18",
     "pg": "^8.7.1",
     "pg-connection-string": "^2.4.0",
+    "slugify": "^1.6.2",
     "sqlite3": "5.0.0",
     "strapi": "3.6.6",
     "strapi-admin": "3.6.6",
